--- a/src/app/ngx-calendar/month/ngx-calendar-month-view/ngx-calendar-month-view.component.scss
+++ b/src/app/ngx-calendar/month/ngx-calendar-month-view/ngx-calendar-month-view.component.scss
@@ -1,9 +1,11 @@
 /* https://angular.io/guide/component-styles */
+
 :host {
   display: block;
 }
 
 /* Animations are cool!  */
+
 @-webkit-keyframes moveFromTopFade {
   from {
     opacity: .3;
@@ -342,17 +344,20 @@
   }
 }
 
-.arrow {
-  position: absolute;
-  top: -5px;
-  left: 50%;
-  margin-left: -2px;
-  width: 0px;
-  height: 0px;
-  border-style: solid;
-  border-width: 0 5px 5px 5px;
-  border-color: transparent transparent rgba(164, 164, 164, 1) transparent;
-  transition: all 0.3s ease;
+.arrow-container {
+  width: 100%;
+  display: flex;
+  .fill {
+    transition: all 0.3s ease;
+  }
+  .arrow {
+    transform: translateX(-2.5px) translateY(-5px);
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 0 5px 5px 5px;
+    border-color: transparent transparent rgba(164, 164, 164, 1) transparent;
+  }
 }
 
 .events {
