change calculate way with width  rate

--- a/src/app/ngx-calendar/week/ngx-calendar-week-view/ngx-calendar-week-view.component.html
+++ b/src/app/ngx-calendar/week/ngx-calendar-week-view/ngx-calendar-week-view.component.html
@@ -12,9 +12,11 @@
 
   <div class="action-block">
     <div class="cal-events-row " *ngFor="let weekEvent of weekEvents; let i = index;">
-      <div class="cal-event-container cal-starts-within-week cal-ends-within-week " [style.width]="weekEvent.width" [style.left]="weekEvent.left"
+      <div class="cal-event-container cal-starts-within-week cal-ends-within-week "
+        [style.width]="weekEvent.style.width"
+        [style.left]="weekEvent.style.left"
         [class.cal-starts-within-week]="weekEvent.startsBeforeWeek" [class.cal-ends-within-week]="weekEvent.endsAfterWeek">
-        <div class="cal-event" [ngClass]="weekEvent.color">
+        <div class="cal-event" [ngClass]="weekEvent.style.color">
           <!-- <span class="cal-event-actions ">
             <a class="cal-event-action " href="javascript:;">
               <i class="fa fa-fw fa-pencil"></i>
