move fly trigger animation

--- a/src/app/ngx-calendar/ngx-calendar.component.html
+++ b/src/app/ngx-calendar/ngx-calendar.component.html
@@ -21,7 +21,7 @@
 
   </div>
 
-  <ul class="type-buttom" [@flyInOut]="legendOpen">
+  <ul class="type-buttom" [@animate]="legendOpen">
     <li>
       <button class="button day" type="button" [disabled]="viewMode === 'day'" (click)="chaneMode('day')">日</button>
     </li>
