--- a/src/app/ngx-calendar/month/ngx-calendar-month-view/ngx-calendar-month-view.component.html
+++ b/src/app/ngx-calendar/month/ngx-calendar-month-view/ngx-calendar-month-view.component.html
@@ -1,6 +1,7 @@
-<div *ngIf="true" class="month new" [ngClass]="className">
+<div class="month new" [ngClass]="className">
   <div class="week" *ngFor="let week of calendarData; trackBy: trackByFn; let week_index = index;">
-    <div class="day" *ngFor="let day of week.days; trackBy: trackByFn; let day_index = index;" [ngClass]="{ other: day.other, today: day.isToday }"
+    <div class="day" *ngFor="let day of week.days; trackBy: trackByFn; let day_index = index;"
+      [ngClass]="{ other: day.other, today: day.isToday }"
       (click)="showEventList(week, day)">
       <div class="day-name">{{ weekNames[day.name] }}</div>
       <div class="day-number">{{ day.number }}</div>
@@ -10,16 +11,18 @@
         </ng-container>
       </div>
     </div>
-    <div class="details" *ngIf="week.selectedDay"  [ngClass]="{ 'in': week.selectedDay }">
-      <div class="arrow-container">
+    <div class="details" [ngClass]="{ 'in': week.selectedDay, 'out': !week.selectedDay }">
+      <div class="arrow-container" *ngIf="week.selectedDay">
         <div class="fill" [ngStyle]="week.style"></div>
         <div class="arrow"></div>
       </div>
       <div class="events">
-        <div class="event" *ngFor="let event of week.selectedDay.events;" (click)="openEvent(event)">
-          <div class="event-category" [ngClass]="event.color"></div>
-          <span>{{ event.title }}</span>
-        </div>
+        <ng-container *ngIf="week.selectedDay">
+          <div class="event" *ngFor="let event of week.selectedDay.events;" (click)="openEvent(event)">
+            <div class="event-category" [ngClass]="event.color"></div>
+            <span>{{ event.title }}</span>
+          </div>
+        </ng-container>
       </div>
     </div>
   </div>
