帶入樣板資訊

--- a/src/app/ngx-calendar/month/ngx-calendar-month-popup/ngx-calendar-month-popup.component.html
+++ b/src/app/ngx-calendar/month/ngx-calendar-month-popup/ngx-calendar-month-popup.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper" [ngClass]="theme">
+<div class="wrapper" [ngClass]="popupData.theme">
   <header class="header">
 
     <div class="title" [ngSwitch]="mode">
