日期選擇器隨著畫面高度變化位置

--- a/src/app/ngx-calendar/ngx-calendar.component.html
+++ b/src/app/ngx-calendar/ngx-calendar.component.html
@@ -3,7 +3,7 @@
     <span class="header-button" (click)="prev()">
       <div class="button left"></div>
     </span>
-    <h1 class="title" (click)="openSelector()">
+    <h1 class="title" (click)="openSelector($event)">
       {{ monDetail }}
     </h1>
     <span class="header-button" (click)="next()">
