把資料改成智生要demo的形式

--- a/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.html
+++ b/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.html
@@ -5,7 +5,9 @@
     </div>
   </div>
   <div class="strip" (scroll)="onScroll($event)" #scrollElm
-    [style.overflow-x]="hasScroll ? 'auto' : 'inherit'">
+    [style.overflow-x]="hasScroll ? 'auto' : 'inherit'"
+    [style.overflow-y]="!hasScroll ? 'auto' : 'inherit'"
+    >
     <section *ngFor="let hourSchema of hourSchemas; let index = index;" class="hour" #bar>
       <div class="line"></div>
       <div class="line"></div>
