--- a/src/app/ngx-calendar/month/ngx-calendar-month-view/ngx-calendar-month-view.component.scss
+++ b/src/app/ngx-calendar/month/ngx-calendar-month-view/ngx-calendar-month-view.component.scss
@@ -1,129 +1,218 @@
 /* https://angular.io/guide/component-styles */
+@import '../../variable.scss';
 
 $animation-time:.5s;
 $max-height:5000px;
+
 :host {
   display: block;
+  max-height: 85vh;
 }
 
 .month {
   opacity: 0;
+
   &.new {
     animation: fadeIn 1s ease-out;
     opacity: 1;
+    // 這段會造成Safari會在下方出現一大段空白區
+    overflow-y: scroll;
   }
-}
 
-.day {
-  display: inline-block;
-  width: calc(100% / 7);
-  padding: 10px;
-  text-align: center;
-  cursor: pointer;
-  .day-events {
-    list-style: none;
-    margin-top: 3px;
-    text-align: center;
-    min-height: 12px;
-    line-height: 6px;
-    overflow: hidden;
-    span {
+  // 顯示模式 <一般主題>
+  &.black {
+    .day {
+      color: white;
+
+      &.other {
+        color: #717171;
+      }
+
+      &.today {
+        background: #467298;
+        color: #53b7ff;
+      }
+    }
+
+    .day-name {
+      color: rgba(255, 255, 255, .5);
+    }
+
+    .details {
+      background: rgba(164, 164, 164, 1);
+      color: white;
+    }
+  }
+
+  // 顯示模式 <深色主題>
+  &.white {
+    .day {
+      color: black;
+
+      &.other {
+        color: #dadada;
+
+        .day-name {
+          color: #dadada;
+        }
+      }
+
+      &.today {
+        background: #d7ecff;
+        color: #53b7ff;
+      }
+    }
+
+    .day-name {
+      color: #db4437;
+    }
+
+    .arrow {
+      border-color: transparent transparent #dcffc7 transparent;
+    }
+
+    .details {
+      background: #dcffc7;
+    }
+  }
+
+  .week {
+    display: flex;
+    flex-wrap: wrap;
+
+    .day {
+      z-index: $main_z;
       display: inline-block;
-      width: 5px;
-      height: 5px;
-      margin: 0 1px;
+      width: calc(100% / 7);
+      padding: 10px;
+      text-align: center;
+      cursor: pointer;
+      box-sizing: border-box;
+
+      .day-events {
+        list-style: none;
+        margin-top: 3px;
+        text-align: center;
+        min-height: 12px;
+        line-height: 6px;
+        overflow: hidden;
+
+        span {
+          display: inline-block;
+          width: 5px;
+          height: 5px;
+          margin: 0 1px;
+        }
+      }
+
+      .day-name {
+        font-size: 9px;
+        text-transform: uppercase;
+        margin-bottom: 5px;
+        letter-spacing: .7px;
+      }
+
+      .day-number {
+        font-size: 24px;
+      }
     }
-  }
-  .day-name {
-    font-size: 9px;
-    text-transform: uppercase;
-    margin-bottom: 5px;
-    letter-spacing: .7px;
-  }
-  .day-number {
-    font-size: 24px;
+
+    .details {
+      display: none;
+      position: relative;
+      max-height: $max-height;
+      width: 100%;
+      margin-top: 5px;
+      border-radius: 4px;
+      flex: 1 1 100%;
+      min-width: 100%;
+      max-width: 100%;
+
+      &.in {
+        display: block;
+        animation: moveFromTopFade $animation-time cubic-bezier(1, 0, 1, 0);
+
+        .event {
+          animation: fadeIn .3s ease both;
+          animation-delay: .3s;
+        }
+      }
+
+      &.out {
+        display: block;
+        z-index: -1;
+
+        .event {
+          animation: fadeIn .3s ease both;
+        }
+
+        max-height: 0;
+        transition: all $animation-time cubic-bezier(0, 1, 0, 1);
+      }
+
+      .arrow-container {
+        width: 100%;
+        display: flex;
+
+        .fill {
+          transition: all 0.3s ease;
+        }
+
+        .arrow {
+          transform: translateX(-2.5px) translateY(-5px);
+          width: 0px;
+          height: 0px;
+          border-style: solid;
+          border-width: 0 5px 5px 5px;
+          border-color: transparent transparent rgba(164, 164, 164, 1) transparent;
+        }
+      }
+
+      .events {
+        min-height: 120px;
+        padding: 7px 0;
+        overflow-y: auto;
+        overflow-x: hidden;
+
+        .event {
+          font-size: 16px;
+          line-height: 22px;
+          letter-spacing: .5px;
+          padding: 2px 16px;
+          vertical-align: top;
+          display: flex;
+
+          &.empty {
+            color: #eee;
+          }
+
+          .event-category {
+            height: 10px;
+            width: 10px;
+            display: inline-block;
+            margin: 6px 5px 0;
+            vertical-align: top;
+          }
+
+          span {
+            display: inline-block;
+            padding: 0 0 0 7px;
+
+            &:hover {
+              color: yellow;
+              font-size: 120%;
+            }
+
+            &:active {
+              color: red;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
-.details {
-  display: none;
-  position: relative;
-  max-height: $max-height;
-  width: 100%;
-  margin-top: 5px;
-  border-radius: 4px;
-  &.in {
-    display: block;
-    animation: moveFromTopFade $animation-time cubic-bezier(1, 0, 1, 0);
-    .event {
-      animation: fadeIn .3s ease both;
-      animation-delay: .3s;
-    }
-  }
-  &.out {
-    display: block;
-    z-index: -1;
-    .event {
-      animation: fadeIn .3s ease both;
-    }
-    max-height: 0;
-    transition: all $animation-time cubic-bezier(0, 1, 0, 1);
-  }
-}
-
-.arrow-container {
-  width: 100%;
-  display: flex;
-  .fill {
-    transition: all 0.3s ease;
-  }
-  .arrow {
-    transform: translateX(-2.5px) translateY(-5px);
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-width: 0 5px 5px 5px;
-    border-color: transparent transparent rgba(164, 164, 164, 1) transparent;
-  }
-}
-
-.events {
-  min-height: 120px;
-  padding: 7px 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
-.event {
-  font-size: 16px;
-  line-height: 22px;
-  letter-spacing: .5px;
-  padding: 2px 16px;
-  vertical-align: top;
-  display: flex;
-  span {
-    display: inline-block;
-    padding: 0 0 0 7px;
-    &:hover {
-      color: yellow;
-      font-size: 120%;
-    }
-    &:active {
-      color: red;
-    }
-  }
-  &.empty {
-    color: #eee;
-  }
-}
-
-.event-category {
-  height: 10px;
-  width: 10px;
-  display: inline-block;
-  margin: 6px 5px 0;
-  vertical-align: top;
-}
 
 @media screen and (max-width: 320px) {
   .day {
@@ -137,6 +226,7 @@ $max-height:5000px;
   0% {
     max-height: 0px;
   }
+
   100% {
     max-height: $max-height;
   }
@@ -151,50 +241,5 @@ $max-height:5000px;
 @keyframes fadeOut {
   100% {
     opacity: 0;
-  }
-}
-
-.black {
-  .day {
-    color: white;
-    &.other {
-      color: #717171;
-    }
-    &.today {
-      background: #467298;
-      color: #53b7ff;
-    }
-  }
-  .day-name {
-    color: rgba(255, 255, 255, .5);
-  }
-  .details {
-    background: rgba(164, 164, 164, 1);
-    color: white;
-  }
-}
-
-.white {
-  .day {
-    color: black;
-    &.other {
-      color: #dadada;
-      .day-name {
-        color: #dadada;
-      }
-    }
-    &.today {
-      background: #d7ecff;
-      color: #53b7ff;
-    }
-  }
-  .day-name {
-    color: #db4437;
-  }
-  .arrow {
-    border-color: transparent transparent #dcffc7 transparent;
-  }
-  .details {
-    background: #dcffc7;
   }
 }
