--- a/src/app/ngx-calendar/ngx-calendar.component.scss
+++ b/src/app/ngx-calendar/ngx-calendar.component.scss
@@ -1,12 +1,16 @@
+@import './variable.scss';
+
 .content {
   user-select: none;
   position: relative;
   overflow: hidden;
+
   .header {
     height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     .title {
       padding: 0;
       margin: 0;
@@ -14,22 +18,28 @@
       line-height: 50px;
       cursor: pointer;
     }
+
     .header-button {
       padding: 1em;
+
       .button {
         border-style: solid;
         cursor: pointer;
         transition: all .5s linear;
+
         &.left {
           border-width: 7.5px 10px 7.5px 0;
         }
+
         &.right {
           border-width: 7.5px 0 7.5px 10px;
         }
       }
     }
   }
+
   .type-buttom {
+    z-index: $main_z + 1;
     position: absolute;
     right: 0;
     list-style: none;
@@ -37,12 +47,14 @@
     margin: 0 0 30px 0;
     text-align: right;
     padding: 0;
+
     .open-menu {
       cursor: pointer;
       width: 50px;
       background: #7ef3cb;
       border-radius: 30px 0 0 30px;
     }
+
     .button {
       cursor: pointer;
       border: 0;
@@ -51,93 +63,117 @@
       line-height: 40px;
       width: 100px;
       transition: all .2s linear;
+
       &.month {
         background: #7ef3cb;
       }
+
       &.week {
         width: 80px;
         background: #ffd353;
       }
+
       &.day {
         width: 60px;
         background: #de5757;
       }
+
       &:hover {
         z-index: 1;
         transform: scale(1.1);
         color: white;
+
         &.month {
           background: #42b991;
         }
+
         &.week {
           width: 80px;
           background: #a98623;
         }
+
         &.day {
           background: #af1d1d;
         }
       }
     }
   }
+
   .legend {
     width: 100%;
     height: 30px;
     line-height: 30px;
   }
+
   &.black {
     background: #4A4A4A;
+
     .header {
       background: #333333;
     }
+
     .title {
       color: white;
     }
+
     .left {
       border-color: transparent rgba(160, 159, 160, 1) transparent transparent;
+
       &:hover {
         border-color: transparent white transparent transparent;
       }
     }
+
     .right {
       border-color: transparent transparent transparent rgba(160, 159, 160, 1);
+
       &:hover {
         border-color: transparent transparent transparent white;
       }
     }
+
     .legend {
       background: #333333;
       color: white;
     }
   }
+
   &.white {
     background: white;
+
     .header {
       background: #c7c7c7;
     }
+
     .title {
       color: black;
     }
+
     .left {
       border-color: transparent black transparent transparent;
+
       &:hover {
         border-color: transparent white transparent transparent;
       }
     }
+
     .right {
       border-color: transparent transparent transparent black;
+
       &:hover {
         border-color: transparent transparent transparent white;
       }
     }
+
     .legend {
       background: #c7c7c7;
       color: black;
     }
   }
+
   .view-block {
-    // scroll bar 會爆走
-    // height: calc(100% - 80px);
-    height: calc(100% - 82px);
+    height: calc(100% - 80px);
+    // 這段會造成Safari會在下方出現一大段空白區
     overflow-y: auto;
   }
 }
@@ -149,25 +185,13 @@
   display: inline-block;
   line-height: 30px;
   background: transparent;
-  &:after {
+
+  .icon {
     position: absolute;
-    content: '';
     height: 5px;
     width: 5px;
     top: 12px;
     left: 14px;
-  }
-  &.blue:after {
-    background: rgba(156, 202, 235, 1);
-  }
-  &.orange:after {
-    background: rgba(247, 167, 0, 1);
-  }
-  &.green:after {
-    background: rgba(153, 198, 109, 1);
-  }
-  &.yellow:after {
-    background: rgba(249, 233, 0, 1);
   }
 }
 
@@ -177,6 +201,7 @@
   width: 110%;
   height: 100%;
   right: 0;
+
   &:after {
     content: '';
     position: absolute;
