--- a/src/app/ngx-calendar/week/ngx-calendar-week-view/ngx-calendar-week-view.component.html
+++ b/src/app/ngx-calendar/week/ngx-calendar-week-view/ngx-calendar-week-view.component.html
@@ -1,9 +1,12 @@
-<div class="cal-week-view" [ngClass]="className">
+<div class="cal-week-view"
+     [ngClass]="className">
 
   <div class="cal-day-headers">
 
-    <div class="cal-header" *ngFor="let weekDay of weekDays; let i = index; let isFirst = first; let isLast = last" [class.cal-weekend]="isFirst || isLast"
-      [class.cal-today]="weekDay.isToday">
+    <div class="cal-header"
+         *ngFor="let weekDay of weekDays; let i = index; let isFirst = first; let isLast = last"
+         [class.cal-weekend]="isFirst || isLast"
+         [class.cal-today]="weekDay.isToday">
       <b>{{ weekNames[i] }}</b>
       <br>
       <span>{{ weekDay.day }}{{ dayName }}</span>
@@ -11,12 +14,15 @@
   </div>
 
   <div class="action-block">
-    <div class="cal-events-row " *ngFor="let weekEvent of weekEvents; let i = index;">
+    <div class="cal-events-row "
+         *ngFor="let weekEvent of weekEvents; let i = index;">
       <div class="cal-event-container cal-starts-within-week cal-ends-within-week "
-        [style.width]="weekEvent.style.width"
-        [style.left]="weekEvent.style.left"
-        [class.cal-starts-within-week]="weekEvent.startsBeforeWeek" [class.cal-ends-within-week]="weekEvent.endsAfterWeek">
-        <div class="cal-event" [ngClass]="weekEvent.style.color">
+           [style.width]="weekEvent.style.width"
+           [style.left]="weekEvent.style.left"
+           [class.cal-starts-within-week]="weekEvent.startsBeforeWeek"
+           [class.cal-ends-within-week]="weekEvent.endsAfterWeek">
+        <div class="cal-event"
+             [style.background]="weekEvent.style.color">
           <!-- <span class="cal-event-actions ">
             <a class="cal-event-action " href="javascript:;">
               <i class="fa fa-fw fa-pencil"></i>
@@ -25,7 +31,9 @@
               <i class="fa fa-fw fa-times"></i>
             </a>
           </span> -->
-          <a class="cal-event-title " href="javascript: void(0)" (click)="openEvent(weekEvent.data)">{{ weekEvent.title }}</a>
+          <a class="cal-event-title "
+             href="javascript: void(0)"
+             (click)="openEvent(weekEvent.data)">{{ weekEvent.title }}</a>
         </div>
       </div>
     </div>
