--- a/src/app/ngx-calendar/week/ngx-calendar-week-view/ngx-calendar-week-view.component.scss
+++ b/src/app/ngx-calendar/week/ngx-calendar-week-view/ngx-calendar-week-view.component.scss
@@ -1,4 +1,6 @@
 :host {
+  min-height: 50vh;
+  max-height: 85vh;
   display: block;
 }
 
@@ -6,10 +8,12 @@
   .cal-day-headers {
     background: #4A4A4A;
   }
+
   .cal-header {
     border-right: 1px solid #e1e1e1;
     border-bottom: 1px solid #e1e1e1;
     color: white;
+
     &.cal-today {
       background-color: #467298;
     }
@@ -20,9 +24,11 @@
   .cal-day-headers {
     background: white;
   }
+
   .cal-header {
     border-right: 1px solid #e1e1e1;
     border-bottom: 1px solid #e1e1e1;
+
     &.cal-today {
       background-color: #d7ecff;
     }
@@ -32,11 +38,13 @@
 .cal-week-view {
   height: calc(100% - 30px);
   overflow-y: auto;
+
   .cal-day-headers {
     display: flex;
     position: absolute;
     width: 100%;
     z-index: 1;
+
     .cal-header {
       flex: 1;
       text-align: center;
@@ -47,35 +55,43 @@
       height: 50px;
     }
   }
+
   .action-block {
-    padding-top: 50px;
+    padding-top: 62px;
   }
+
   .cal-event {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+
   .cal-events-row {
     position: relative;
     height: 33px;
   }
+
   .cal-event-container {
     display: inline-block;
     position: absolute;
   }
+
   .cal-ends-within-week .cal-event {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
   }
+
   .cal-starts-within-week .cal-event {
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
   }
+
   .cal-event {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+
   .cal-event {
     padding: 0 10px;
     font-size: 12px;
@@ -86,10 +102,12 @@
     background-color: #d1e8ff;
     border: 1px solid #1e90ff;
     color: #1e90ff;
+
     &.orange {
       background-color: #ffc681;
       border-color: rgb(173, 33, 33);
     }
+
     &.blue {
       background-color: #c4e7ff;
       border-color: #0834e3;
