ng lib ngx-hm-calendar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,9 @@
 <div style="background: green;height: 200px;"> -->
 
 <div>
-  <ngx-calendar [className]="theme" [events]="events" (open)="onOpenEvent($event)"></ngx-calendar>
+  <ngx-hm-calendar [className]="theme"
+                   [events]="events"
+                   (open)="onOpenEvent($event)"></ngx-hm-calendar>
 </div>
 
 <!-- <div style="
