change project name to demo, different with package name

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,4 +28,4 @@ background: blueviolet;
   <button (click)="changeTheme()">{{ theme }}</button>
 </div> -->
 
-<!-- <ngx-calendar-week></ngx-calendar-week> -->
+<!-- <ngx-hm-calendar-week></ngx-hm-calendar-week> -->
