update example data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
 
 <div>
   <ngx-hm-calendar [className]="theme"
+                   [eventCategorys]="eventCategorys"
+                   [weeklyEvents]="weeklyEvents"
                    [events]="events"
                    (open)="onOpenEvent($event)"></ngx-hm-calendar>
 </div>
